affiner la recherche et generer les factories
